# TarkovAmmoScanner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  run.ps1
.github/workflows/: ci.yml
scripts/: setup.ps1
src/tarkov_ammo_scanner/: __main__.py  api.py  app.py  capture.py  diagnostics.py  hotkeys.py  matcher.py  models.py  ocr.py  paths.py
src/tarkov_ammo_scanner/ui/: main_window.py  overlay.py  styles.py
tests/: test_diagnostics.py  test_matcher.py  test_models.py
