[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "tarkov-ammo-scanner"
version = "0.1.0"
description = "Compact OCR overlay for Escape from Tarkov ammunition stats"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "invex0811" }]
dependencies = [
  "PySide6>=6.8,<7",
  "Pillow>=10,<13",
  "mss>=9,<11",
  "pytesseract>=0.3.13,<1",
  "rapidfuzz>=3.9,<4",
  "requests>=2.32,<3",
  "pynput>=1.7,<2",
]

[project.scripts]
tarkov-ammo-scanner = "tarkov_ammo_scanner.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tarkov_ammo_scanner = ["assets/*.svg"]
